# backend/src/modules/currencies/useCases/importCurrencies/importCurrenciesController.ts
@@ -1,13 +1,16 @@
 import { Response, Request } from "express";
+import { container } from "tsyringe";
 
 import { ImportCurrenciesUseCase } from "./importCurrenciesUseCase";
 
 class ImportCurrenciesController {
-    constructor(private importCurrenciesUseCase: ImportCurrenciesUseCase) {}
-
-    handle(request: Request, response: Response): Response {
+    async handle(request: Request, response: Response): Promise<Response> {
         const { file } = request;
-        this.importCurrenciesUseCase.execute(file);
+
+        const importCurrenciesUseCase = container.resolve(
+            ImportCurrenciesUseCase
+        );
+        await importCurrenciesUseCase.execute(file);
         return response.send();
     }
 }
