# backend/src/swagger.json
@@ -65,6 +65,33 @@
                     }
                 }
             }
+        },
+        "/currencies/import": {
+            "post":{
+                "tags": ["Currency"],
+                "summary": "Upload a new currency",
+                "description": "Upload a new currency",
+                "requestBody": {
+                  "content": {
+                    "multipart/form-data": {
+                      "schema": {
+                        "type": "object",
+                        "properties": {
+                          "file": {
+                            "type": "string",
+                            "format": "binary"
+                          }
+                        }
+                      }
+                    }
+                  }
+                },
+                "responses": {
+                  "201": {
+                    "description": "Created"
+                  }
+                }
+            }
         }
         }
     }
